OLMIS-1085: chnged paginated states to show it in url and added pagination to non-full supply tab

--- a/src/main/webapp/openlmis-pagination/openlmis-pagination.scss
+++ b/src/main/webapp/openlmis-pagination/openlmis-pagination.scss
@@ -13,4 +13,12 @@
         @include button-color($light-red);
         border-color: $light-red;
     }
+
+    li:last-child a::after {
+        content: " >>";
+    }
+
+    li:first-child a::before {
+        content: "<< ";
+    }
 }
