OLMIS-1745: Added missing tests to the RequisitionViewController and requisitionValidator

--- a/src/main/webapp/requisition-view/requisition-view.scss
+++ b/src/main/webapp/requisition-view/requisition-view.scss
@@ -4,7 +4,7 @@
     }
 }
 
-.error-indicator:after {
+.nav > li.error > a:after {
     color: $red;
     content: ' \f06a';
     font-family: 'FontAwesome';
