OLMIS-1085: refactored paginatedListFactory
moved pagination from state resolve to controller
moved getting template columns to state resolve

--- a/src/main/webapp/common/button.mixins.scss
+++ b/src/main/webapp/common/button.mixins.scss
@@ -12,6 +12,7 @@
 
 @mixin button-color($color){
   color: $white;
+  border-color: $color;
   @include linear-gradient(to bottom,  lighten($color, 15%), lighten($color, 10%) 10%, $color);
   &:hover,
   &:active,
@@ -20,5 +21,6 @@
   &[disabled] {
   	color: $white;
     background: $color;
+    border-color: $color;
   }
 }
