OLMIS-1692: Added popover directive
- Added styleguide
- Added JSDocs
- Made working specification

--- a/styleguide/index.hbs
+++ b/styleguide/index.hbs
@@ -176,6 +176,7 @@
     'openlmis-local-storage',
     'openlmis-modal',
     'openlmis-offline',
+    'openlmis-popover',
     'openlmis-table'
   ]);
 })();
