--- a/src/main/webapp/openlmis-form/characters-left.scss
+++ b/src/main/webapp/openlmis-form/characters-left.scss
@@ -4,12 +4,7 @@
     flex-direction: row;
     font-size: 0.8em;
 
-    div:first-child::after {
-        content: ':';
-        margin-right: 0.5em;
+    .no-left {
+        color: $red;
     }
-}
-
-.characters-left.no-left {
-    color: $red;
 }
