--- a/src/main/webapp/common/icon.mixins.scss
+++ b/src/main/webapp/common/icon.mixins.scss
@@ -1,30 +1,39 @@
-@mixin icon($icon-code){
+@mixin icon($icon){
+  @extend .fa;
+  @extend ".fa-#{$icon} !optional";
   &::before{
-    content: $icon-code;
-    font-family: "FontAwesome";
     display: inline-block;
     font-size: 1em;
-    width: 1.2em;
-    height: 1.2em;
+    width: 100%;
+    height: 100%;
     line-height: 1.2em;
     text-align: center;
   }
 }
 
-@mixin icon-only($icon-code){
-  @include icon($icon-code);
+@mixin icon-only($icon){
+  @include icon($icon);
   overflow: hidden;
   display: inline-block;
   position: relative;
   font-size: 1em;
   width: 1.2em;
   height: 1.2em;
-  line-height: 1.2em;
   text-indent: -20000em;
   &::before{
     position: absolute;
     top:0px;
     left: 0px;
     text-indent: 0em;
+  }
+}
+
+@mixin button-icon-only($icon){
+  @include icon-only($icon);
+  width: 2em;
+  height: 2em;
+  line-height: 2em;
+  &::before{
+    line-height: 2em;
   }
 }
