OLMIS-1692: Got summary popover to display rows correctly

--- a/src/main/webapp/openlmis-popover/popover.scss
+++ b/src/main/webapp/openlmis-popover/popover.scss
@@ -46,7 +46,7 @@ Styleguide 1.5
 }
 
 .popover > button.close{
-	@include button-icon-only("times");
+	@include icon-only("times");
 	opacity: 1;
 	position: absolute;
 	top: $space-size/2;
