--- a/src/main/webapp/requisition-summary/requisition-summary.scss
+++ b/src/main/webapp/requisition-summary/requisition-summary.scss
@@ -38,10 +38,19 @@ aside.requisition-summary {
 }
 
 .popover.requisition-summary{
+    width: auto;
+    max-width: none;
+    dl {
+        display: flex;
+        flex-wrap: wrap;
+    }
     dl > dt {
-        white-space: nowrap;
+        white-space: normal;
+        flex: 1 0 auto;
     }
     dl > dd {
+        flex: 0 0 auto;
+        white-space: nowrap;
         text-align: right;
     }
 }
