OLMIS-1085: Made paginagtion hide if there are no non-full supply items

--- a/src/main/webapp/openlmis-pagination/openlmis-pagination.scss
+++ b/src/main/webapp/openlmis-pagination/openlmis-pagination.scss
@@ -3,8 +3,9 @@
     display: flex;
     justify-content: space-between;
 
-    .pagination-info {
-        margin-top: 20px; // to match margin of bootstrap pagination element
+    margin-bottom: $space-size;
+    .pagination{
+        margin: 0px;
     }
 }
 
