OLMIS-1535: Made entire message into string with line break

--- a/src/main/webapp/openlmis-home/home.scss
+++ b/src/main/webapp/openlmis-home/home.scss
@@ -13,3 +13,7 @@ $image-height: 136px;
     background: url(openlmis-home/home-background.png) no-repeat right bottom;
   }
 }
+
+.home-page > h2{
+  white-space: pre-line;
+}
