OLMIS-1267: Added requisition status messages history
Added service which opens modal with all status messages for current requisition.
Added some tests.
Added filter to display requisition status properly.

--- a/src/main/webapp/requisition-status-messages/status-messages.scss
+++ b/src/main/webapp/requisition-status-messages/status-messages.scss
@@ -15,3 +15,28 @@
         height: 2.7em;
     }
 }
+
+aside.status-history {
+	padding: $padding2px;
+    font-weight: normal;
+    width: 100%;
+    height: auto;
+    > dl {
+        display: block;
+        margin: 0.3em 0.3em 0.3em 0.8em;
+    }
+}
+
+.status-header {
+    background: $light-gray;
+    > span {
+        font-weight: bold;
+        margin-left: 0.8em;
+    }
+    > input {
+        background: none;
+        border: none;
+        float: right;
+        text-decoration: underline;
+    }
+}
