--- a/src/main/webapp/requisition-status-messages/status-messages.scss
+++ b/src/main/webapp/requisition-status-messages/status-messages.scss
@@ -16,17 +16,6 @@
     }
 }
 
-aside.status-history {
-	padding: $padding2px;
-    font-weight: normal;
-    width: 100%;
-    height: auto;
-    > dl {
-        display: block;
-        margin: 0.3em 0.3em 0.3em 0.8em;
-    }
-}
-
 .status-header {
     background: $light-gray;
     > span {
@@ -38,5 +27,22 @@ aside.status-history {
         border: none;
         float: right;
         text-decoration: underline;
+    }
+}
+
+.status-message aside {
+    @include clearfix();
+    margin-bottom: 1em;
+    @include box-shadow(0.2em 0.2em 0 $light-shadow);
+    border: 0.1em solid $medium-gray;
+    background: $very-light-gray;
+    text-shadow: 0 0.1em 0 white;
+	padding: 0em;
+    font-weight: normal;
+    width: 100%;
+    height: auto;
+    > dl {
+        display: block;
+        margin: 0.3em 0.3em 0.3em 0.8em;
     }
 }
