OLMIS-1784: Created openlmis-toolbar directive to standardize all toolbars
- changed some styling related to buttons
- added openlmis-toolbar directive to standardize toolbars
- refactored all toolbars to use the new directive
- moved Delete button behind Skip button on the requisition screen
- made the Delete button visible when requisition is submitted

--- a/src/main/webapp/common/buttons.scss
+++ b/src/main/webapp/common/buttons.scss
@@ -34,28 +34,17 @@ markup:
 
 Styleguide 1.3
 */
-.button {
-    text-shadow: 0.1em 0.1em 0.1em $shadow;
-    @include button-color($gray);
-    padding: 0.5em 1em;
-    line-height: 1em;
-    border-color: rgba($white, 0.3) $shadow $light-shadow;
+
+.btn-primary {
+    @include button-color($green);
 }
 
-a,
-input {
-    &.btn-default {
-        @extend .button;
-    }
+.delete-button {
+    @include button-color($red);
+}
 
-    &.btn-primary {
-        @include button-color($green);
-    }
-
-    &.delete-button {
-        @extend .button;
-        @include button-color($red);
-    }
+.btn-default {
+    @include button-color($gray);
 }
 
 .grid-btn {
