OLMIS-1726 Rename references of months
Only seems to have been used in calculation factory (and test) and an unused set of css class names.

--- a/src/main/webapp/common/facility-approved-product-table.scss
+++ b/src/main/webapp/common/facility-approved-product-table.scss
@@ -18,7 +18,7 @@
   .col-action {
     min-width: 125px;
   }
-  .col-max-months-stock, .col-min-months-stock, .col-eop {
+  .col-max-stock, .col-min-stock, .col-eop {
     min-width: 60px;
     max-width: 125px;
     input[type="text"] {
