OLMIS-1072: Set bootstrap icon path variable

--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -25,6 +25,8 @@ $text-color-disabled: $gray;
 
 $table-border-color: $gray;
 
+$icon-font-path: 'fonts/';
+
 // Spacing
 $padding2px:2px;
 $space-size: 20px;
