--- a/src/main/webapp/openlmis-table/sticky.scss
+++ b/src/main/webapp/openlmis-table/sticky.scss
@@ -4,8 +4,8 @@ Sticky Columns
 Tables can have sticky columns to keep important elements within view.
 
 markup:
-<div class="table-container">
-<table class="nowrap" ng-init="rows=[
+<div class="openlmis-table-container">
+<table class="openlmis-table nowrap" ng-init="rows=[
 {
   'id' : 'c9287c65-67fa-4958-adb6-52069f2b1379',
   'name' : 'Apr2017',
@@ -78,7 +78,7 @@ markup:
     <tr ng-repeat="row in rows">
       <td class="sticky"><input type="checkbox" /></td>
       <td>1f3c89b213e44a729ef2228302cc5a25</td>
-      <th>1f3c89b213e44a729ef2228302cc5a25</th>
+      <td>1f3c89b213e44a729ef2228302cc5a25</td>
       <td>1f3c89b213e44a729ef2228302cc5a25</td>
       <td>1f3c89b213e44a729ef2228302cc5a25</td>
       <td class="sticky"><button>Action</button>
