--- a/src/main/webapp/common/base.scss
+++ b/src/main/webapp/common/base.scss
@@ -25,8 +25,6 @@ markup:
 Styleguide 1.0
 */
 
-@import 'bourbon';
-
 body {
   background-color: $gray;
   font-family: Arial, sans-serif;
@@ -84,28 +82,28 @@ h1 {
   text-align: right;
 }
 
-@include keyframes(fade-in) {
+@keyframes(fade-in) {
   from {
-    @include transform(scale(0));
+    transform: scale(0);
   }
   to {
-    @include transform(scale(1));
+    transform: scale(1);
   }
 }
 
-@include keyframes(fade-out) {
+@keyframes(fade-out) {
   from {
-    @include transform(scale(1));
+    transform: scale(1);
   }
   to {
-    @include transform(scale(0));
+    transform: scale(0);
   }
 }
 
 .fadeIn {
-  @include animation(fade-in 500ms);
+  animation: 500ms fade-in;
 }
 
 .fadeOut {
-  @include animation(fade-out 500ms);
+  animation: 500ms fade-out;
 }
