--- a/src/main/webapp/common/button.mixins.scss
+++ b/src/main/webapp/common/button.mixins.scss
@@ -1,27 +1,30 @@
 /*
- * This program is part of the OpenLMIS logistics management information system platform software.
- * Copyright © 2013 VillageReach
- *
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
- *  
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
- * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
- */
-
-@import 'bourbon';
+* This program is part of the OpenLMIS logistics management information system platform software.
+* Copyright © 2013 VillageReach
+*
+* This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+*  
+* This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Affero General Public License for more details.
+* You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
+*/
 
 @mixin button-color($color){
-  color: $white;
-  border-color: $color;
-  border-width: 1px;
-  @include linear-gradient(to bottom,  lighten($color, 10%), lighten($color, 5%) 10%, $color);
-  &:hover,
-  &:active,
-  &.active,
-  &.disabled,
-  &[disabled] {
-  	color: $white;
-    background: $color;
+    $button-text-color: $white;
+    @if (lightness($color) > 50) {
+        $button-text-color: $text-color; // Lighter backgorund, return dark color
+    }
+    color: $button-text-color;
     border-color: $color;
-  }
+    border-width: 1px;
+    background: $color;
+    background-image: linear-gradient(to bottom,  lighten($color, 10%), lighten($color, 5%) 10%, $color);
+    &:hover,
+    &:active,
+    &.active,
+    &.disabled,
+    &[disabled] {
+        color: $button-text-color;
+        background: $color;
+        border-color: $color;
+    }
 }
