--- a/src/main/webapp/common/font-awesome.scss
+++ b/src/main/webapp/common/font-awesome.scss
@@ -1,3 +1,5 @@
 
-@import 'bourbon';
-@include font-face("FontAwesome", "fonts/fontawesome-webfont", $file-formats: eot woff2 woff);
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("fonts/fontawesome-webfont") format('woff');
+}
