--- a/src/main/webapp/openlmis-login/login.scss
+++ b/src/main/webapp/openlmis-login/login.scss
@@ -1,8 +1,6 @@
-@import 'bourbon';
 
 .login-container {
-  @include linear-gradient(to bottom, $white 0%, $white 48%, $light-gray 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '$white', endColorstr = '$light-gray', GradientType = 0); /* IE6-9 */
+  background-image: linear-gradient(to bottom, $white 0%, $white 48%, $light-gray 100%);
   border-radius: 0.3em;
   h1 {
     font-size: 1.3em;
@@ -84,10 +82,10 @@ input[placeholder].placeholder {
 }
 
 .modal-login-header {
+  @include clearfix();
   border-bottom: 0.1em solid $medium-gray;
   border-radius: 0.3em 0.3em 0 0;
-  @include linear-gradient(to bottom, $white 30%, $light-gray 100%);
-  @include clearfix();
+  background-image: linear-gradient(to bottom, $white 30%, $light-gray 100%);
   padding: 0.5em 1em;
   display: flex;
   align-items: baseline;
