--- a/src/main/webapp/openlmis-table/tables.scss
+++ b/src/main/webapp/openlmis-table/tables.scss
@@ -85,8 +85,6 @@ markup:
 Styleguide 4.0
 */
 
-@import 'bourbon';
-
 table.openlmis-table {
     border-collapse: separate;
 }
@@ -116,14 +114,16 @@ table.openlmis-table {
 
     th {
         border-top: $table-border;
-        @include linear-gradient(to top, $light-gray, lighten($light-gray, 15%), $fallback: $light-gray);
+        background: $light-gray;
+        background-image: linear-gradient(to top, $light-gray, lighten($light-gray, 15%));
         white-space: nowrap;
     }
 
     thead{
         background-color: $light-gray;
         tr:first-child{
-            @include linear-gradient(to top, $light-gray, lighten($light-gray, 15%), $fallback: $light-gray);
+            background: $light-gray;
+            background-image: linear-gradient(to top, $light-gray, lighten($light-gray, 15%));
         }
     }
 
