OLMIS-1642: Created button pattern
- Mixin focused button pattern with alias extentions to bootstrap
- Includes a pattern for button groups

--- a/src/main/webapp/common/aside.scss
+++ b/src/main/webapp/common/aside.scss
@@ -31,15 +31,15 @@
     }
   }
 
-  button{
-    @extend .pull-right;
-  }
+  // button{
+  //   @extend .pull-right;
+  // }
 
-  h1, h2, h3, h4{
-    font-size: 1.5em;
-    float: left;
-    clear: left;
-    margin: 0px;
-  }
+  // h1, h2, h3, h4{
+  //   font-size: 1.5em;
+  //   float: left;
+  //   clear: left;
+  //   margin: 0px;
+  // }
 
 }
