--- a/src/main/webapp/common/variables.scss
+++ b/src/main/webapp/common/variables.scss
@@ -27,6 +27,11 @@ $table-border-color: $gray;
 
 $icon-font-path: 'fonts/';
 
+$border-radius: 4px;
+$border-radius-base: $border-radius;
+$border-radius-large: $border-radius;
+$border-radius-small: $border-radius;
+
 // Spacing
 $padding2px:2px;
 $space-size: 20px;
