--- a/src/main/webapp/requisition-convert-to-order/convert-to-order-list.scss
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order-list.scss
@@ -23,7 +23,7 @@
 			}
 
 			button.search {
-				@include button-color($green);
+				@include button($green);
 			}
 		}
 
@@ -34,7 +34,7 @@
 	}
 
 	button.convert-to-order {
-		@include button-color($green);
+		@include button($green);
 		float: right;
 	}
 
