--- a/src/main/webapp/requisition-non-full-supply/add-product.scss
+++ b/src/main/webapp/requisition-non-full-supply/add-product.scss
@@ -13,12 +13,12 @@
 
 		button.cancel {
 			@extend .btn;
-			@include button-color($gray);
+			@include button($gray);
 		}
 
 		input.add-product {
 			@extend .btn;
-			@include button-color($green);
+			@include button($green);
 			float: right;
 		}
 	}
